[25-09-2024] nullish coalesing,OR,first component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,8 @@
 <!-- <p>Subtract {{subtract(9,5)}}</p> -->
 
 <p>Only Pares {{getArray()}}</p>
+
+<user-card 
+[name] = "'juan'" 
+[email]="'jun@gmail.com'">
+</user-card>
