[26-09-2024]styles,first output, parent and child component communication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
 <p>Only Pares {{getArray()}}</p>
 
 <user-card 
-[name] = "'juan'" 
-[email]="'jun@gmail.com'">
+[name] = "juan" 
+[email]="jun@gmail.com"
+(sendData)="receiveData($event)"
+>
 </user-card>
