--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,3 +1,6 @@
-<p>user-card component</p>
-<p>INPUT NAME: {{name}}</p>
-<p>INPUT EMAIL: {{email}}</p>
+<div class="user-card">
+    <p>USER CARD COMPONENT</p>
+    <p>INPUT NAME: {{ name }}</p>
+    <p>INPUT email: {{ email }}</p>
+    <button (click)="onSendData()">send Data</button>
+</div>
