[27-09-2024] ng-content and ngIf old and new sintax

--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,5 +1,4 @@
-<p>calculator works!</p>
-<div class="calculator"></div>
+<div class="calculator">
     <p>Calculator</p>
     <input type="text" [(ngModel)]="box1Value" >
     <input type="text" [(ngModel)]="box2Value">
