[30-09-2024] OnInit, OnDestroy, Constructor

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,15 @@
 
 <p>Only Pares {{getArray()}}</p>
 
-<user-card name="juan" email="'juan@gmail.com'" (sendData)="receiveData($event)">
+<button (click)="userCardCreated = !userCardCreated">create and destroy user card</button>
+@if(userCardCreated) {
+  <user-card name="juan" [email]="'juan@gmail.com'" (sendData)="receiveData($event)">
     <p>My HTML from father</p>
     <button>My button from father</button>
-</user-card>
+  </user-card>
+} @else {
+  <p>user card destroyed</p>
+}
 
 <p>RESULT: {{result}}</p>
 <calculator (sum)="onResult($event)" (mul)="onResult($event)" (reset)="onResult($event)">
