--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -7,5 +7,7 @@
     <p>INPUT email: {{ email }}</p>
     <button (click)="onSendData()">send Data</button>
 
+    <p>PASSWORD = {{password}}</p>
+
     <ng-content></ng-content>
 </div>
