--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -1,10 +1,9 @@
-<p>USER CARD COMPONENT</p>
-<p>INPUT NAME: {{ name }}</p>
-<p>INPUT email: {{ email }}</p>
 <div class="user-card">
     <p>USER CARD COMPONENT</p>
     <p>INPUT NAME: {{ name }}</p>
     <p>INPUT email: {{ email }}</p>
+
+    <input type="text" [(ngModel)]="password">
     <button (click)="onSendData()">send Data</button>
 
     <p>PASSWORD = {{password}}</p>
