[02-10-2024] ViewChild with static option true or false

--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -4,7 +4,11 @@
     <p>INPUT email: {{ email }}</p>
 
     <input type="text" [(ngModel)]="password">
-    <button  #buttonTest (click)="onSendData()">send Data</button>
+    <button #buttonShow (click)="showButton = !showButton">show button</button>
+    
+    @if(showButton){
+        <button #buttonTest (click)="onSendData()">send Data</button>
+    }
 
     <p>PASSWORD = {{password}}</p>
 
