--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,3 +78,5 @@
     {{ showDiscountedOnly ? 'Mostrar todas las personas' : 'Mostrar solo con descuento' }}
   </button>
 </div>
+
+<counter></counter>
