--- a/src/app/user-card/user-card.component.html
+++ b/src/app/user-card/user-card.component.html
@@ -6,8 +6,8 @@
 <p [ngStyle]="{
     'background-color': password === 'red' ? 'red' : 'yellow',
 }">USER CARD COMPONENT</p>
-    <p>INPUT NAME: {{ name }}</p>
-    <p>INPUT email: {{ email }}</p>
+<p [class.user-card]="password === '123'">INPUT NAME: {{ name }}</p>
+<p [style.background-color]="password === 'red' ? 'red' : 'yellow'">INPUT email: {{ email }}</p>
 
     <input type="text" [(ngModel)]="password">
     <button #buttonShow (click)="showButton = !showButton">show button</button>
@@ -19,4 +19,8 @@
     <p>PASSWORD = {{password}}</p>
 
     <ng-content></ng-content>
+
+    <app-card></app-card>
+    <app-navbar></app-navbar>
+    <app-alert></app-alert>
 </div>
