--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,3 +88,13 @@
     <button>My button from father</button>
   </user-card>
   <button (click)="addVideo()">add new video to youtube</button>
+
+
+<div  
+[ngColors]="'green'" 
+[defaultColor]="'pink'" 
+(colorClick)="getColor($event)" 
+(colorDoubleCick)="getColor($event)"     
+             style="border: 1px solid orange;">
+  MY CUSTOM ATTRIBUTE DIRECTIVE
+</div>
