[11-10-2024] default pipes, pure and impure function, custom pipes pure and impure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,96 +1,15 @@
-<h1>hello, {{title + 2}}</h1>
-<p>Add {{sum(3,5) }}</p>
-<!-- <p>Subtract {{subtract(9,5)}}</p> -->
+<p>PIPES</p>
 
-<!-- <p>Only Pares {{getArray()}}</p>
+<P> {{ users | json }} </P>
+<p> {{ 'juan' | uppercase }} </p>
+<p> {{ 'JUAN' | lowercase }} </p>
+<p> {{ 'hola mundo' | titlecase }}</p>
+<p> {{ 'Tue Oct 27 15:35:08 CDT 2009' | date: 'dd/MM/YYYY'  }} </p>
 
-<button (click)="userCardCreated = !userCardCreated">create and destroy user card</button>
+<p> MY FISRT PIPE PURE </p>
+<p>{{ students | pure }}</p>
+<p> MY FIRST PIPE IMPURE</p>
+<p>{{ students | impure }}</p>
 
-<button (click)="selectedUser = users[0]">change to user 0</button>
-<button (click)="selectedUser = users[1]">change to user 1</button>
-
-@if(userCardCreated) {
-  <user-card [name]="selectedUser.name" [email]="selectedUser.email" (sendData)="receiveData($event)">
-    <p>My HTML from father</p>
-    <button>My button from father</button>
-  </user-card>
-} @else {
-  <p>user card destroyed</p>
-}
-
-<p>RESULT: {{result}}</p>
-<calculator (sum)="onResult($event)" (mul)="onResult($event)" (reset)="onResult($event)">
-</calculator>
-
-<p *ngIf="var1 === var2; else elseold"> variables are equals </p>
-<ng-template #elseold>
-    <p>old, result is false</p>
-</ng-template>
-
-@if(var1 === var2) {
-    <p> new Sintax, variables are equals </p> 
- 
- } @else {
-    <p> new Sintax, is false</p> 
- }
- 
-<p *ngFor="let item of ['a','b','c','d']; let i = index">
-    old for, value: {{item}}, index: {{i}}
-</p>
-
-@for(item of ['a','b','c','d']; track item){
-    <p>New Syntax Student: {{item}}</p>
-}
-
-<div [ngSwitch]="var1">
-    <p *ngSwitchCase="0">var is 0</p>
-    <p *ngSwitchCase="1">var is 1</p>
-    <p *ngSwitchDefault>default value</p>
-</div>
-
-@switch(var1) {
-    @case(0) { <p>new syntax, var is 0</p> }
-    @case(1) { <p>new syntax, var is 1</p> }
-    @default { <p>new syntax, default</p> }
-}
-
-<div>
-  <h1>Personas</h1>
-
-  <div *ngFor="let person of filteredPersons">
-    <p>Persona</p>
-    <p>Género: {{ person.gender }}</p>
-    <p>Nombre: {{ person.name }}</p>
-    <p>Edad: {{ person.age }}</p>
-    <p *ngIf="person.age !== undefined && person.age > 18">Descuento</p>
-  </div>
-
-  <div>
-    <p>Total personas femeninas: {{ totalFemales }}</p>
-    <p>Total personas masculinas: {{ totalMales }}</p>
-  </div>
-
-  <div>
-    <p>Personas con descuento: {{ totalWithDiscount }}</p>
-  </div>
-
-  <button (click)="toggleDiscountFilter()">
-    {{ showDiscountedOnly ? 'Mostrar todas las personas' : 'Mostrar solo con descuento' }}
-  </button>
-</div>
-
-<counter></counter>
-
-<button (click)="var1 = var1 + 1"> Increment Var1 </button>
-  <p>{{ var1 }}</p> -->
-  <user-card [name]="selectedUser.name" [email]="selectedUser.email" (sendData)="receiveData($event)">
-    <p>My HTML from father</p>
-    <button>My button from father</button>
-  </user-card>
-  <button (click)="addVideo()">add new video to youtube</button>
-
-  <button (click)="userCardCreated = !userCardCreated">change userCardCreated</button>
-  {{ userCardCreated }}
-  <div *ngCreateHtml="userCardCreated" (sendMessage)="getColor($event)">
-    <p>MY CUSTON STRUCTURAL DIRECTIVE</p>
-    <p> EXAMPLE </p>
+<button (click)="students.push(12)">add neew number</button>
+<button (click)="addNumber()">add neew number in ts</button>
